--- a/starwarsbackend/pom.xml
+++ b/starwarsbackend/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
     	<version>3.2.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
